--- a/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
@@ -73,6 +73,6 @@
     <script src="https://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chosen-js@1.8.7/chosen.jquery.js" type="text/javascript"></script>
 
-    @RenderSection("scripts", false);
+    @RenderSection("scripts", false)
 </body>
 </html>
