--- a/TTV48Schmalkalden/Views/Error/InternalServerError.cshtml
+++ b/TTV48Schmalkalden/Views/Error/InternalServerError.cshtml
@@ -12,7 +12,7 @@
                     </h1>
                     <h2>Da ist wohl etwas schief gelaufen.</h2>
                     <div class="error-details">
-                        Bitte wenden Sie sich an den Betreiber dieser Website.
+                        Die Seite existiert entweder nicht, oder es ist ein anderer Fehler aufgetreten.
                     </div>
                     <div class="error-actions">
                         <a asp-controller="Home" asp-action="Index" class="btn btn-primary btn-lg">
