--- a/TTV48Schmalkalden/Views/Shared/Navigation.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/Navigation.cshtml
@@ -39,14 +39,7 @@
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" style="padding-right: 15px;">Verein <i class="icon-down-open"></i></a>
 
                             <ul class="dropdown-menu" style="right: auto;">
-                                @if (ViewContext.RouteData.Values["controller"].ToString() == "Home")
-                                {
-                                    <li><a href="#kalender" class="scroll-to" data-anchor-offset="0">Termine</a></li>
-                                }
-                                else
-                                {
-                                    <li><a asp-controller="Home" asp-action="Index" asp-fragment="kalender">Termine</a></li>
-                                }
+                                <li><a asp-controller="Calendar" asp-action="Index">Termine</a></li>
                                 @if (ViewContext.RouteData.Values["controller"].ToString() == "Home")
                                 {
                                     <li><a href="#training" class="scroll-to" data-anchor-offset="0">Training</a></li>
