--- a/TTV48Schmalkalden/Views/News/Detail.cshtml
+++ b/TTV48Schmalkalden/Views/News/Detail.cshtml
@@ -67,7 +67,7 @@
                             {
                                 <li class="comment">
                                     <div class="avatar icon-overlay icn-link comment-image">
-                                        <a href="#"><img src="~/assets/images/placeholder-100px.svg" alt="Platzhalter für Kommentare" title="Kommentarbild"></a>
+                                        <img src="~/assets/images/placeholder-100px.svg" alt="Platzhalter für Kommentare" title="Kommentarbild">
                                     </div><!-- /.avatar -->
 
                                     <div class="commentbody">
