--- a/TTV48Schmalkalden/Views/Home/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                     <a href="#training" data-anchor-offset="0" class="btn btn-large scroll-to">Training</a>
                 </div><!-- /.col -->
                 <div class="col-lg-4 inner-right-xs inner-bottom-xs">
-                    <h3>Aktuelles</h3>
+                    <h3>Aktuelles:</h3>
                     <div class="row thumbs gap-xs">
                         <div class="col-12 thumb">
                             <a asp-action="Detail" asp-controller="News" asp-route-id="@Model.Latest.NewsId">
