corona advice and disbled commend section

--- a/TTV48Schmalkalden/Views/Home/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
         <div class="container inner-top inner-bottom-xs">
             <div class="inner-right-xs inner-bottom-xs">
                 <h1 class="">Wir heißen Sie rechtherzlich auf unserer offiziellen Vereinswebsite willkommen</h1>
+                <p>Bleiben Sie wegen Corona bitte zu Hause</p>
             </div><!-- /.col -->
             <div class="row">
                 <div class="col-lg-4 inner-right-xs inner-bottom-xs">
