--- a/TTV48Schmalkalden/Views/News/Detail.cshtml
+++ b/TTV48Schmalkalden/Views/News/Detail.cshtml
@@ -105,7 +105,7 @@
                                 </div><!-- /.col -->
                             </div><!-- /.row -->
                             @Html.HiddenFor(model => model.CommentForm.NewsId)
-                            <button type="submit" class="btn btn-submit">Kommentar abschicken</button>
+                            <button type="submit" disabled class="btn btn-submit">Kommentar abschicken</button>
 
                         </form>
 
